# pyprova

./: .flaskenv  .gitignore  LICENSE  README.md  pyproject.toml
db.utils/: profiletypes.sql
migrations/versions/: 2a2efa1a9332_mig_try_ii.py
pyprova/: __init__.py  commands.py  database.db
pyprova-ui/: .env.example  README.md  index.html  package-lock.json  package.json
pyprova-ui/src/: App.vue  main.js
pyprova-ui/src/components/: Navbar.vue  Prova.vue  Questao.vue
pyprova-ui/src/router/: index.js
pyprova-ui/src/utils/: jwtDecoder.js  profileTypes.js
pyprova-ui/src/views/: HomeView.vue  LoginView.vue  ProfileView.vue  ProvaView.vue  QuestaoView.vue  SignupView.vue
pyprova/controllers/: auth.py  main.py  prova.py
pyprova/models/: prova.py  user.py
pyprova/routes/: auth.py  main.py
pyprova/services/: auth.py  prova.py
pyprova/templates/: base.html
