[tool.poetry]
name = "pyprova"
version = "0.1.0"
description = ""
authors = ["cap-nascimento <anascimentovieira2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
