[tool.poetry]
name = "pyprova"
version = "0.1.0"
description = ""
authors = ["cap-nascimento <anascimentovieira2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"
flask-jwt-extended = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
